[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-langgraph-tutorial"
version = "0.1.0"
description = "Python learning workspace for LangChain and LangGraph."
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests", "advanced/tests"]
python_files = ["test_*.py"]
addopts = "-q"
